[gd_scene load_steps=4 format=2]

[ext_resource path="res://players/base.gd" type="Script" id=1]
[ext_resource path="res://tools/direction_arrow.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5275, 21.3443 )

[node name="Playerbase" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Look" type="Polygon2D" parent="."]
position = Vector2( 0.959074, 27.5286 )
scale = Vector2( 2.4423, 2.31569 )
color = Color( 0.188235, 0.188235, 0.188235, 1 )
polygon = PoolVector2Array( -4.59151, -21.0221, -4.51276, -2.67447, 3.83421, -2.67447, 3.73804, -21.1014 )

[node name="control_vector" parent="." instance=ExtResource( 2 )]
default_color = Color( 0.431373, 1, 0.4, 1 )

[node name="sticky_vector" parent="." instance=ExtResource( 2 )]
visible = false
default_color = Color( 0.968627, 0.4, 1, 1 )

[node name="up_vector" parent="." instance=ExtResource( 2 )]
visible = false
default_color = Color( 1, 0.4, 0.4, 1 )
